--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "math17300"
+title: "Welcome"
 ---
 
-This is a Quarto website.
+This website contains the schedule and content for Math 17300 - Fall 2023. Note that the current schedule is available in the [relevant section of the syllabus](syllabus.qmd#schedule).
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+The CCNY academic calendar can be found [online](https://www.ccny.cuny.edu/sites/default/files/2023-05/Fall%202023%20Academic%20Calendar.pdf]
