--- a/index.qmd
+++ b/index.qmd
@@ -4,4 +4,4 @@ title: "Welcome"
 
 This website contains the schedule and content for Math 17300 - Fall 2023. Note that the current schedule is available in the [relevant section of the syllabus](syllabus.qmd#schedule).
 
-The CCNY academic calendar can be found [online](https://www.ccny.cuny.edu/sites/default/files/2023-05/Fall%202023%20Academic%20Calendar.pdf]
+The CCNY academic calendar can be found [online](https://www.ccny.cuny.edu/sites/default/files/2023-05/Fall%202023%20Academic%20Calendar.pdf)
