--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -8,7 +8,7 @@ format:
 ## Contact Information
 
 Instructor: Vitaly Druker  <br>
-Email:  <br> 
+Email:  vdruker@ccny.cuny.edu <br> 
 Office Hours:  
 
 ## Text Book
