--- a/homework/section-1_4.qmd
+++ b/homework/section-1_4.qmd
@@ -3,8 +3,6 @@ title: "Homework Section 1.4"
 format: html
 ---
 
-
-
 ## Question 17-20
 
 ```{r}
@@ -14,12 +12,9 @@ data <- c(1,2,1, 0, 2,
 0,1,2,1,1)
 ```
 
-
-
 ```{r}
 hist(data, breaks = -1:3, right = FALSE, freq = FALSE)
 ```
-
 
 ```{r}
 table(data) |> tibble::as_tibble() |> 
@@ -28,22 +23,22 @@ gt::gt()
 
 ### 17
 
-- Greater than 1 (just 2s): 6
-- Total observations: `r length(data)`
-- Answer: `r 6/20`
+-   Greater than 1 (just 2s): 6
+-   Total observations: `r length(data)`
+-   Answer: `r 6/20`
 
 ### 18
 
-- 1 - answer from 17
-- Answer: `r 1 - 6/20`
+-   1 - answer from 17
+-   Answer: `r 1 - 6/20`
 
 ### 19
 
-- Answer: `r mean(data == 2)`
+-   Answer: `r mean(data == 2)`
 
 ### 20
 
-It doesn't look like there are any outliers - it is hard to detect them with just three different values. The distribution is relatively symmetric. 
+It doesn't look like there are any outliers - it is hard to detect them with just three different values. The distribution is relatively symmetric.
 
 ## Questions 21-22
 
@@ -59,12 +54,11 @@ breaks = hist_breaks, right = FALSE)
 
 ```
 
-
 I used these breaks `r hist_breaks`
 
 ### Q21
 
-The shape of the scores seem pretty flat - with a small peak at > 90.
+The shape of the scores seem pretty flat - with a small peak at \> 90.
 
 ### Q22
 
@@ -81,16 +75,15 @@ data <- c(
     42,50,37,39,33,45,38,46,36,31
 )
 ```
- 
 
- ### a
+### a
 
- ```{r}
- hist(data, 
-    breaks = seq(30, length.out = 8, by = 5),
-    right = FALSE)
- 
- ```
+```{r}
+hist(data, 
+   breaks = seq(30, length.out = 8, by = 5),
+   right = FALSE)
+
+```
 
 ### b
 
@@ -106,14 +99,12 @@ mean(data < 50)
 
 ## Question 33
 
-
 ```{r}
 data <- c(.4, .6, .1, 1.1, 2.8,3.6,3.7,3.8,4,4,
 4.4,4.5,5.3,5.3,5.5,5.8,5.9,6.1,6.4,6.6,
 7,7.5,7.6,7.6,7.8,8.1,8.3,8.6,8.7,8.8,
 8.8,8.9,8.9,9.1,9.2,9.4,9.6,9.7,9.8
 )
-
 ```
 
 ### a
@@ -130,4 +121,4 @@ Histogram is left skewed
 
 ### c
 
-Maybe because as you move further away you get a chance to see more starbucks - there are only a few that are close to you but once you move out you can get a large swath of them. 
+Maybe because as you move further away you get a chance to see more starbucks - there are only a few that are close to you but once you move out you can get a large swath of them.
