added office hours

--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -11,8 +11,8 @@ email-obfuscation: javascript
 
 Instructor: Vitaly Druker  <br>
 Email:  [vdruker@ccny.cuny.edu](mailto:vdruker@ccny.cuny.edu) <br> 
-Office Hours:  TBD <br>
-Class: TuThu 6:00 PM - 7:40 PM <br>
+Office Hours: Tu 7:40-8:40 <br>
+Class: Tu, Thu 6:00 PM - 7:40 PM <br>
 Location: NAC 6/106
 
 ## Text Book
