--- a/lectures/lecture-01.qmd
+++ b/lectures/lecture-01.qmd
@@ -18,7 +18,10 @@ date: 2023-08-29
 
 ## 1.4 Relative Frequency Histograms
 
-
+```{r}
+#| include: false
+sapply(list.files(here::here('R'), full.names = T), source)
+```
 
 ```{r}
 #| label: tbl-1-9
@@ -206,18 +209,6 @@ Download a sample Exel file [here](lecture-01-histograms.xlsx)
 
 ## Homework
 
-```{r}
-get_lecture_homework <- function(lecture_number) {
-    schedule_raw <- readxl::read_xlsx(here::here('resources','semester-planning.xlsx'))
-
-
-    subset(schedule_raw, `Lecture Number` == lecture_number, select = exercises, drop = TRUE)
-
-}
-
-```
-
-
 `r get_lecture_homework(1)`
 
-Answers: [Section 1.4](/homework/section-1_4.qmd)
+Answers: [Chapter 1 - Section 1.4](/homework/chapter-01.qmd#section-1.4)
