--- a/lectures/lecture-02.qmd
+++ b/lectures/lecture-02.qmd
@@ -146,7 +146,7 @@ It's possible to have more than one mode (ties). In this case
 
 ### Homework
 
-Homework asks you to create dot plots. These are basically histograms where each number is plotted individually and stacked on top of each other as dots. See figure 2.2 on page 56 as an example
+Homework asks you to create dot plots. These are basically histograms where each number is plotted individually and stacked on top of each other as dots. See figure 2.2 on page 56 as an example.
 
 ```{r}
 get_lecture_homework(2)
@@ -154,7 +154,9 @@ get_lecture_homework(2)
 
 Answers: [Chapter 2 - Section 1](/homework/chapter-02.qmd#section-2.1)
 
+### Excel File
 
+Download a sample Exel file [here](lecture-02-numeric-summaries.xlsx)
 
 ## 2.2 Measures of Variability
 
