--- a/wip/lecture-04.qmd
+++ b/wip/lecture-04.qmd
@@ -5,4 +5,87 @@ format: html
 date: 2023-09-05
 ---
 
-## 4.1
+```{r}
+#| include: false
+g <- glue::glue
+library(ggplot2)
+sapply(list.files(here::here('R'), full.names = T), source)
+```
+
+## Introduction
+
+- Basic concepts of probability so that we can draw conclusions about a sampled population
+
+- Example: Toss a single coin, probability of a heads (or tails) is 50%
+
+-  If you toss 10 times and see 10 heads. If you have a fair coin, the probability that you'd see 10 heads is very low. It's likely the coin is biased
+
+- Two ways 
+    -  probability of even when the population is known, 
+    - probabiltiy of inference given you observe a sample from the population
+
+## 4.1 Events and the sample space
+
+- An **experiment** is the process by which an observation or measurement is obtained.
+
+Examples:
+
+- Recording a test grade
+- Measuring daily rainfall
+- Recording a persons's opinion
+- Any others??
+
+When an experiment is performed we observe an outcome called a **simple event** - Often written as $E_i$
+
+Example -
+
+What are the simple events that can happen when a 6 sided die is rolled?
+
+- $E_1$ = 1
+- $E_2$ = 2
+- ...
+- $E_6$ = 6
+
+
+An **event** is a collectino of simple events. for example:
+
+- _A_: Observe an odd number: $A = \{E_1, E_3, E_5\}$
+- _B_: Observe a number less than 4: $B = \{E_1, E_2, E_3\}$
+
+
+Two events are **mutually exclusive** if when one event occurs the otherr cannot - and vise versa.
+
+Note that $A$ and $B$ are not mutuall exclussive - why?
+
+- What are some example of mutually exlcussive events
+
+- The set of all simple events i called the sample space , _S_
+
+
+Venn Diagram: (see page 129 of book)
+- Venn Diagram of die tossing, including all simple event and A/B
+
+
+Some examples:
+
+### Ex 4.2
+
+Toss a simple coin - what are the simple events that define the sample space?
+
+### Ex. 4.3 & 4.4
+
+
+Blood Types (4 Simple Events)
+
+These are mutually exclusive
+
+- what about adding Rh factor - (positive/negative)
+- Use a tree diagram to show how to come up with the simple events
+
+
+
+```{r}
+
+get_lecture_homework(4)
+
+```
