--- a/lectures/lecture-05.qmd
+++ b/lectures/lecture-05.qmd
@@ -15,3 +15,10 @@ sapply(list.files(here::here('R'), full.names = T), source)
 
 ## Section 4.2 Calculating Probabilties using Simple Events
 
+The probabilit of an event _A_ is a measure of our believe that the event A will occur. 
+
+$$
+P(A) = \lim_{n\to\infty}
+$$
+
+
