moved 5 to active and finished 6

--- a/homework/chapter-04.qmd
+++ b/homework/chapter-04.qmd
@@ -197,3 +197,63 @@ flextable::bg(
 ```
 
 6/24 = 1/4
+
+
+## Section 4.3
+
+```{r}
+library(combinat)
+```
+
+### 4.3.1
+
+$10 \times 8 = 80$
+
+### 4.3.2
+
+$4 \times 7 \times 3 = 84$
+
+### 4.3.5-12
+
+```{r}
+perm <- function(n, k) {
+    prod(tail(seq.int(n), k))
+}
+
+```
+
+
+- 4.3.5: `r perm(5,3)`
+- 4.3.6: `r perm(10,9)`
+- 4.3.7: `r perm(6,6)`
+- 4.3.8: `r perm(20,1)`
+
+- 4.3.9: `r choose(5,3)`
+- 4.3.10: `r choose(10,9)`
+- 4.3.11: `r choose(6,6)`
+- 4.3.12: `r choose(20,1)`
+
+### 4.3.13
+
+$$
+P^8_5 = 6720
+$$
+
+
+### 4.3.16
+
+$$
+4 \times 12 \times 4 = 192
+$$
+
+### 4.3.19
+
+### 4.3.21
+
+### 4.3.22
+
+### 4.3.24
+
+### 4.3.28
+
+### 4.3.29
