moved lecture 5 to main and fixed a bunch of typos

--- a/lectures/lecture-05.qmd
+++ b/lectures/lecture-05.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Lecture 5"
-subtitle: Events and the Sample Space
+subtitle: Calculating Probabilites Using Simple Events
 format: html
 date: 2023-09-12
 ---
@@ -12,53 +12,44 @@ library(ggplot2)
 sapply(list.files(here::here('R'), full.names = T), source)
 ```
 
-
 ## Section 4.2 Calculating Probabilties using Simple Events
 
-The probabilit of an event _A_ is a measure of our believe that the event A will occur. 
+The probability of an event *A* is a measure of our believe that the event A will occur.
 
 $$
-P(A) = \lim_{n\to\infty}
+P(A) = \lim_{n\to\infty} \frac{frequency}{n}
 $$
 
+This is a limit of the relative frequency.
 
- This is a limit of the relative frequency.
+-   $P(A) = 0$
+-   $P(A) = 1$
 
- - $P(A) = 0$
- - $P(A) = 1$
+Each experiment results in one and only one single experiment. - Probabiliy of a single event must like between 0 and 1 - The sum of the probabilities for all simple events in *S* = 1.
 
+If we can write down all simple events and find their individual probabilities, we can find the probability of an event A:
 
-Each experiment results in one and only one single experiment.
-- Probabiliy of a single event must like between 0 and 1
-- The sum of the probabilities for all simple events in _S_ = 1.
-
-If iwe can write down all simple events and find their individual prbabilities, we can find the probability of an event A:
-
-- The **probability of an event A** is equal to the sume of the probabilies of the simple events contained in A
+-   The **probability of an event A** is equal to the sum of the probabilities of the simple events contained in A
 
 ### Example 4.5
 
 Toss two fair cons and record the outcome - find the probability of observing exactly one head.
 
-What are the simple events?
-What is the probability of observing exactly one head?
-
+What are the simple events? What is the probability of observing exactly one head?
 
 ### Example 4.6
 
-Proportinos of blood types A, B, AB and ) in the caucasian population in the US is .4, .11, .04, .45. What is the probability that a single caucasian person chosen randomly will have either type A or type AB Blood?
-
+Proportinos of blood types A, B, AB and O in the Caucasian population in the US is .4, .11, .04, .45. What is the probability that a single Caucasian person chosen randomly will have either type A or type AB Blood?
 
 $$
 P(\text{A or AB}) = P(\text{A}) + P(\text {AB}) = 0.4 + .04 = .44
 $$
 
-
 ### Example 4.8
 
 A candy dish contains one yellow and two red candies - close your eyes and choose two candies - what is the probability that both are red?
 
-- Need to list all simple events via tree:
+-   Need to list all simple events via tree:
 
 ```{r}
 x <- c("R1", "R2", "Y1")
@@ -69,8 +60,6 @@ dplyr::arrange(first_draw) |>
 flextable::flextable() |> 
 flextable::merge_v()
 ```
-
-
 
 ### Homework
 
