--- a/homework/chapter-04.qmd
+++ b/homework/chapter-04.qmd
@@ -249,12 +249,67 @@ $$
 
 ### 4.3.19
 
+Part A:
+- 3 stages with n = 52 for each:
+- $52 \times 52 \times 52 = 140,608$
+
+Part B:
+
+- 3 stages with n = 52, 51, and 50, respectively
+- $52 \times 51 \times 50 = 132,600$
+
+
+Part C:
+- 1st stage - pick any card = 52
+- 2nd stage - 1 option same card as the previous person
+- 3rd stage - 1 option - same card as previous
+
+- Total options from part A
+- Probability of same card = $52/140608 = 0.00037$
+
+Part D 
+
+- Probability that all thre students pick different cards:
+- Part B/Part A = $132600/140608 = 0.943$
+
 ### 4.3.21
 
-### 4.3.22
+Part A:
+- order does not matter
+- $C^52_5 = \frac{52!}{(52 - 5)!5!} = 2,598,960
+
+Part B:
+- Only 4 different combinations
+
+Part C:
+- 4/2598960 = 0.00000154
+
 
 ### 4.3.24
 
+Part A
+
+- $C^5_2 = 30$
+
+Part B:
+
+- 1/30
+
+
 ### 4.3.28
 
+- Part A:  $4 \times 3 \times 2 \times 1 = 24$
+- Part B: If dave wins sprint there are $1 \times 3 \times 2 \times 1 = 6$ total ways he can win. Probability = 6/24
+
+- Part C: $1 \times 1 \times 2 \times 1 = 2$ Porbability = 2/24
+- Part D: There are 3 options for first (any but Ed), 2 options for second (not and and not first), 1 option for 3rd left and Ed for fourth. Prob = 6/24
+
 ### 4.3.29
+
+Total ways to draw the shapes:
+$ 12! = 479,001,600$
+
+How many ways to group them when drawing them?
+$12 \times 2 \times 1 \times 9 \times 2 \times 1 \times 6 \times 2 \times 1 \times 3 \times 2 \times 1 = 31,104$
+
+Probability = $31104/479001600 = 0.00006494 $
